<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    id="barberfish"
    displayName="@string/extension_name"
    icon="@drawable/ic_extension"
    scansDevices="false">
    <DataType
        typeId="three-column"
        displayName="@string/three_column_name"
        description="@string/three_column_description"
        graphical="true" />
    <DataType
        typeId="avg-speed-total"
        displayName="@string/avg_speed_total_name"
        description="@string/avg_speed_total_description"
        graphical="true" />
    <DataType
        typeId="avg-speed-moving"
        displayName="@string/avg_speed_moving_name"
        description="@string/avg_speed_moving_description"
        graphical="true" />
    <DataType
        typeId="time-elapsed"
        displayName="@string/time_elapsed_name"
        description="@string/time_elapsed_description"
        graphical="true" />
    <DataType
        typeId="time-moving"
        displayName="@string/time_moving_name"
        description="@string/time_moving_description"
        graphical="true" />
    <DataType
        typeId="time-paused"
        displayName="@string/time_paused_name"
        description="@string/time_paused_description"
        graphical="true" />
</ExtensionInfo>
